# Electronic-Leadscrew-Zephyr-RTOS

./: .gitignore  .gitmodules  CMakeLists.txt  Electronic-Leadscrew-Zephyr-RTOS.code-workspace  Kconfig  LeadscrewWarrantyVoider.code-workspace  README.md  build.bat  build.sh  defconfig  platformio.ini  prj.conf  testcase.yaml
.devcontainer/: Dockerfile  devcontainer.json
boards/: STM32F103C8-ELS.json  rpi_pico.overlay
boards/arm/qemu_cortex_m3/: qemu_cortex_m3_defconfig
boards/arm/rpi_pico/: rpi_pico_defconfig
boards/native/native_sim/: native_sim_defconfig
config/: FreeRTOSConfig.h  etl_profile.h
include/: etl_profile.h  main.hpp
include/Encoder/: IEncoder.hpp
include/Encoder/Driver/: LR7366R-constants.hpp  LS7366R.hpp  SDECEncoder.hpp
include/State/: State.hpp  StateMachine.hpp
include/State/Machine/: EStop.hpp  Idle.hpp  Machine.hpp  Messages.hpp  Running.hpp
lib/FreeRTOS-Kernel/: .piopm  extra_script.py  library.json
src/: Helpers.hpp  main.cpp
src/Device/: Position.cpp  Position.hpp
src/Device/Encoder/: IEncoder.hpp
src/Device/Encoder/driver/: LR7366R-constants.hpp  LS7366R.cpp  LS7366R.hpp  VirtualEncoder.cpp  VirtualEncoder.hpp
src/Device/Motor/: IMotor.hpp  VirtualMotor.cpp  VirtualMotor.hpp
src/Device/State/: Position.cpp  Position.hpp
src/Encoder/: Encoder.cpp
src/Encoder/driver/: LS7366R.cpp  LS7366R.hpp
src/Logger/: Errors.cpp  Errors.hpp  Logger.hpp
src/Machine/FSM/: sml.hpp
src/Machine/FSM/Movement/: Base.cpp  Base.hpp  CommonEvents.hpp  Root.hpp  SM.hpp  Slotting.hpp  Turning.hpp
src/Machine/Manager/: Axis.hpp  LatheZ.hpp  Manager.hpp
src/Machine/MessageBus/: Messages.hpp
src/State/: StateMachine.cpp
src/State/Machine/: EStop.cpp  Idle.cpp  Machine.cpp  Running.cpp
test/: CMakeLists.txt  VirtualEncoder.cpp  bsp.cpp  bsp.hpp  main.c  main.cpp  testcase.yaml
test/App/: EventsSignals.hpp  playground.cpp
test/Driver/Encoder/: test_Encoder.cpp
test/Encoder/: test_Encoder.cpp
test/Mocks/: trompeloeil_adapter.hpp
test/Mocks/Logging/: MockLogBackend.hpp
test/Mocks/Machine/FSM/: MockFSM.hpp
test/Mocks/Machine/MessageBus/: MockMachineRouter.hpp
test/Mocks/Position/: MockPosition.hpp
test/Position/: test_GettersSetters.cpp  test_Positions.cpp  test_Sync.cpp
test/State/: test_state_machine.cpp
test/State/Machine/: test_init.cpp
test/TestHelpers/: DefaultUnitTest.hpp
test/TestHelpers/Logging/: LoggingUnitTest.hpp  TestLogBackend.hpp
test/test_dummy/: test_dummy.c
zephyr/: .dts  CMakeLists.txt
zephyr/boards/arm/stm32f103c8-ELS/: .config  stm32f103c8-ELS.dts
